[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Ben-Lichtman"]
edition = "2018"

[dependencies]
regex = "1.4.2"
parse-display = "0.4.0"
reformation = "0.5.2"
itertools = "0.9.0"
rayon = "1.5.0"
num_enum = "0.5.1"
rand = "0.7.3"
num = "0.3.1"
nom = "6.0.1"
petgraph = "0.5.1"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"
